--- a/Sytle.css
+++ b/Sytle.css
@@ -4,7 +4,7 @@
 
 /* Ajuste color columna izquierda */
 .bg-primary {
-    background-color: #2c3e50 !important;
+    background-color: #061f36 !important;
 }
 
 .progress{
@@ -12,5 +12,20 @@
 }
 
 .progress-bar{
-    background-color: #229847;
+    background-color: #ffffff;
+}
+
+
+/* cambio color texto col derecho */
+.text-primary{
+    color:#3498db !important;
+}
+
+.card{
+    transition: transform 0.3s ease, box-shadow0 0.3s ease;
+}
+
+.card:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0,1);
 }
